# vix-challenger

./: .gitignore  README.md  pyproject.toml  pytest.ini
docs/: project_scope.md
reports/: consolidated_summary.md  multi_ticker_summary.md  poc_summary.md  schema_notes.md
scripts/: 00_inspect_schema.py  01_convert_csv.py  02_compute_vix_like.py  03_download_fred.py  04_compare_to_fred.py  05_cross_ticker_analysis.py  download_data.py  test_vix_single_day.py  validate_vix_series.py
src/vix_challenger/: __init__.py  config.py
src/vix_challenger/io/: __init__.py  fred.py  options_loader.py  splits.py  spy_csv.py
src/vix_challenger/pipelines/: __init__.py
src/vix_challenger/vix/: __init__.py  daily.py  interpolate.py  methodology.md  parity.py  qc.py  selection.py  strip.py  variance.py
src/vix_challenger/viz/: __init__.py  comparison.py
tests/: __init__.py  conftest.py  test_interpolation.py  test_io.py  test_results.py  test_vix_core.py
